Fixed issue with controllers being loaded twice + refactored code to be agnostic of 'teams' or 'athletes'

--- a/public/views/dashboard-v2/group.html
+++ b/public/views/dashboard-v2/group.html
@@ -7,14 +7,14 @@
     <!-- Breadcrumbs -->
     <div ng-include src="'views/dashboard-v2/partials/breadcrumbs.html?' + Rover.assetVersion()"></div>
 
-    <!-- Team page contents -->
+    <!-- Group page contents -->
 
     <section>
     	<div class="row">
     		<div class="col-sm-12">
 
                 <!-- List of members -->
-                <div ng-include src="'views/dashboard-v2/team-partials/members.html?' + Rover.assetVersion()"></div>
+                <div ng-include src="'views/dashboard-v2/group-partials/members.html?' + Rover.assetVersion()"></div>
     		</div>
     	</div>
     </section>
@@ -23,8 +23,8 @@
     	<div class="row">
     		<div class="col-sm-6">
 
-                <!-- New athlete form -->
-                <div ng-include src="'views/dashboard-v2/team-partials/form.html?' + Rover.assetVersion()"></div>
+                <!-- New member form -->
+                <div ng-include src="'views/dashboard-v2/group-partials/form.html?' + Rover.assetVersion()"></div>
     		</div>
     	</div>
     </section>
