--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -1,10 +1,9 @@
 <header class="page-main-header">
     <div class="row">
         <div class="col-sm-12">
-            <h4>Dashboard</h4>
+            <h4>Old Dashboard (deprecated)</h4>
             <p>
-                Welcome to the dashboard! Here is where you can add or modify<br>
-                a team and define its team members.
+                Welcome to the (old) dashboard!
             </p>
         </div>
     </div>
