--- a/public/views/dashboard-v2/groups.html
+++ b/public/views/dashboard-v2/groups.html
@@ -1,11 +1,11 @@
 
 <!-- Header -->
-<div ng-include src="'views/dashboard-v2/partials/header.html?' + Rover.assetVersion()"></div>
+<div ng-include src="'views/dashboard-v2/partials/header.html?' + assetVersion"></div>
 
 <div class="page page-dashboard" data-ng-controller="FMSFormController">
 
     <!-- Breadcrumbs -->
-    <div ng-include src="'views/dashboard-v2/partials/breadcrumbs.html?' + Rover.assetVersion()"></div>
+    <div ng-include src="'views/dashboard-v2/partials/breadcrumbs.html?' + assetVersion"></div>
 
     <!-- Dashboard contents -->
 
@@ -14,7 +14,7 @@
     		<div class="col-sm-12">
 
                 <!-- List of groups -->
-                <div ng-include src="'views/dashboard-v2/groups-partials/groups.html?' + Rover.assetVersion()"></div>
+                <div ng-include src="'views/dashboard-v2/groups-partials/groups.html?' + assetVersion"></div>
     		</div>
     	</div>
     </section>
@@ -24,7 +24,7 @@
     		<div class="col-sm-6">
 
                 <!-- Add a group form -->
-                <div ng-include src="'views/dashboard-v2/groups-partials/form.html?' + Rover.assetVersion()"></div>
+                <div ng-include src="'views/dashboard-v2/groups-partials/form.html?' + assetVersion"></div>
     		</div>
     	</div>
     </section>
