--- a/public/views/dashboard-v2/member.html
+++ b/public/views/dashboard-v2/member.html
@@ -1,11 +1,11 @@
 
 <!-- Header -->
-<div ng-include src="'views/dashboard-v2/partials/header.html?' + Rover.assetVersion()"></div>
+<div ng-include src="'views/dashboard-v2/partials/header.html?' + assetVersion"></div>
 
 <div class="page page-dashboard" data-ng-controller="FMSFormController">
 
     <!-- Breadcrumbs -->
-    <div ng-include src="'views/dashboard-v2/partials/breadcrumbs.html?' + Rover.assetVersion()"></div>
+    <div ng-include src="'views/dashboard-v2/partials/breadcrumbs.html?' + assetVersion"></div>
 
     <!-- Member page contents -->
 
@@ -20,7 +20,7 @@
     				<div class="text-left col-sm-4">
     					<!-- <h3>Player Information</h3> -->
     					<h3>
-    					    {{data.athlete.selected.first_name}} {{data.athlete.selected.last_name}}
+    					    {{data.member.selected.first_name}} {{data.member.selected.last_name}}
     					</h3>
     				</div>
 
@@ -31,7 +31,7 @@
                             <div class="col-sm-5 text-right">Profile created</div>
                             <div class="col-sm-7">
                                 <b>
-                                    {{ data.athlete.selected.created_at }}
+                                    {{ data.member.selected.created_at }}
                                 </b>
                             </div>
                         </div>
@@ -59,14 +59,14 @@
                             <div class="col-sm-5 text-right">Height</div>
                             <!-- <div class="col-sm-7">
                                 <b>
-                                    {{ '' + Math.floor(data.athlete.selected.height_cm/30.48) }}'
-                                    {{ '' + Math.round((Number(data.athlete.selected.height_cm) % 30.48) * 12 /30.48) }}"
-                                    ({{data.athlete.selected.height_cm}} cm)
+                                    {{ '' + Math.floor(data.member.selected.height_cm/30.48) }}'
+                                    {{ '' + Math.round((Number(data.member.selected.height_cm) % 30.48) * 12 /30.48) }}"
+                                    ({{data.member.selected.height_cm}} cm)
                                 </b>
                             </div> -->
                             <div class="col-sm-7">
                                 <b>
-                                    {{data.athlete.selected.height_cm}} cm
+                                    {{data.member.selected.height_cm}} cm
                                 </b>
                             </div>
                         </div>
@@ -76,7 +76,7 @@
                             <div class="col-sm-5">
                                 <span class="pull-right">Weight</span>
                             </div>
-                            <div class="col-sm-7"><b>{{data.athlete.selected.weight_cm}}</b></div>
+                            <div class="col-sm-7"><b>{{data.member.selected.weight_cm}}</b></div>
                         </div>
 
                         <!-- Primary Sport -->
@@ -84,7 +84,7 @@
                             <div class="col-sm-5">
                                 <span class="pull-right">Primary Sport</span>
                             </div>
-                            <div class="col-sm-7"><b>{{data.athlete.selected.primary_sport}}</b></div>
+                            <div class="col-sm-7"><b>{{data.member.selected.primary_sport}}</b></div>
                         </div>
 
                         <!-- Primary Position -->
@@ -92,7 +92,7 @@
                             <div class="col-sm-5">
                                 <span class="pull-right">Primary Position</span>
                             </div>
-                            <div class="col-sm-7"><b>{{data.athlete.selected.primary_position}}</b></div>
+                            <div class="col-sm-7"><b>{{data.member.selected.primary_position}}</b></div>
                         </div>
 
                         <!-- Hand/Leg Dominance -->
@@ -100,19 +100,19 @@
                             <div class="col-sm-5">
                                 <span class="pull-right">Hand/Leg Dominance</span>
                             </div>
-                            <div class="col-sm-7"><b>{{data.athlete.selected.hand_leg_dominance}}</b></div>
+                            <div class="col-sm-7"><b>{{data.member.selected.hand_leg_dominance}}</b></div>
                         </div>
 
     					<!-- <ul class="list-unstyled">
-    						<li>Profile Created <b class="pull-right">{{data.athlete.selected.created_at}}</b></li>
+    						<li>Profile Created <b class="pull-right">{{data.member.selected.created_at}}</b></li>
     						<li>Phone <b class="pull-right">{{}}</b></li>
     						<li>Sex <b class="pull-right">{{}}</b></li>
     						<li>Date of birth <b class="pull-right">{{}}</b></li>
-    						<li>Height <b class="pull-right">{{data.athlete.selected.height_cm}}</b></li>
-    						<li>Weight <b class="pull-right">{{data.athlete.selected.weight_kg}}</b></li>
-    						<li>Primary Sport <b class="pull-right">{{data.athlete.selected.primary_sport}}</b></li>
+    						<li>Height <b class="pull-right">{{data.member.selected.height_cm}}</b></li>
+    						<li>Weight <b class="pull-right">{{data.member.selected.weight_kg}}</b></li>
+    						<li>Primary Sport <b class="pull-right">{{data.member.selected.primary_sport}}</b></li>
     						<li>Primary position <b class="pull-right">{{}}</b></li>
-    						<li>Hand/Leg dominance <b class="pull-right">{{data.athlete.selected.hand_leg_dominance}}</b></li>
+    						<li>Hand/Leg dominance <b class="pull-right">{{data.member.selected.hand_leg_dominance}}</b></li>
     					</ul> -->
 
     				</div>
@@ -177,7 +177,7 @@
     				</div>
 
     					<div morris-chart
-    							data-data="data.athlete.selected.fms_forms"
+    							data-data="data.member.selected.fms_forms"
     							data-type="area"
     							data-xkey="created_at"
     							data-ykeys='["Lhurdle", "Rhurdle", "Llunge", "Rlunge"]'
@@ -206,7 +206,7 @@
     				<div class="panel-body ng-scope" data-ng-controller="morrisChartCtrl">
 
     					<div morris-chart
-    							data-data="data.athlete.selected.fms_forms"
+    							data-data="data.member.selected.fms_forms"
     							data-type="line"
     							data-xkey="created_at"
     							data-ykeys='["totalscore"]'
