Added placeholder page + continued refactoring

--- a/public/views/dashboard-v2/groups-partials/form.html
+++ b/public/views/dashboard-v2/groups-partials/form.html
@@ -3,7 +3,7 @@
 
     <!-- Add team form -->
     <div class="panel-body">
-        <h2>Add a Team *</h2>
+        <h2>Add a Team</h2>
 
         <div class="col-sm-2">
             <a href="javascript:;" class="btn btn-primary btn-metro btn-metro-sm">
