--- a/public/views/fmsresults.html
+++ b/public/views/fmsresults.html
@@ -34,21 +34,19 @@
 
 	<div class="row">
 		<div class="col-sm-6">
-
 			<div class="panel panel-default">
-
 				<div class="panel-body">
-
 					<div class="text-left col-sm-6">
 						<h3>
 							Athlete's FMS Score History
 						</h3>
-
 					</div>
 
-					<div ng-show="data.member.selected == null">Select an athlete under 'Dashboard' in the sidebar before viewing historical FMS data</div>
+					<div ng-show="data.member.selected.id < 1">
+                        Select an athlete under 'Dashboard' in the sidebar before viewing historical FMS data
+                    </div>
 
-					<div ng-hide="data.member.selected == null" class="panel-body ng-scope">
+					<div ng-hide="data.member.selected.id < 1" class="panel-body ng-scope">
 						<table class="table">
 							<thead>
 								<tr>
@@ -85,11 +83,8 @@
 		</div>
 
 		<div class="col-sm-6">
-
 			<div class="panel panel-default">
-
 				<div class="panel-body">
-
 					<div class="text-left col-sm-6">
 						<h3>
 							FMS Details
