--- a/public/views/settings.html
+++ b/public/views/settings.html
@@ -1,8 +1,3 @@
 <header class="page-main-header">
-    <div class="row">
-        <div class="col-sm-6">
-            <h4>Settings</h4>
-            <p>Coming soon!</p>
-        </div>
-    </div>
+    <div ng-include=" 'views/placeholder.html?' + assetVersion "></div>
 </header>
