--- a/public/views/header.html
+++ b/public/views/header.html
@@ -61,7 +61,7 @@
                         class="btn btn-primary"
                         ng-click="Rover.browseTo.group(data.group.selected)">
 
-                        View {{ data.group.selected.name }}'s page
+                        <i class="fa fa-angle-double-right"></i>
                     </button>
                 </div>
             </li>
@@ -97,7 +97,7 @@
                         class="btn btn-primary"
                         ng-click="Rover.browseTo.member(data.member.selected)">
 
-                        View {{ data.member.selected.first_name }}'s profile
+                        <i class="fa fa-angle-double-right"></i>
                     </button>
                 </div>
 			</li>
