--- a/public/views/navigation.html
+++ b/public/views/navigation.html
@@ -69,7 +69,7 @@
             </ul>
         </li>
 
-		<!-- <li ng-controller="MovementScreenController">
+		<li ng-controller="MovementScreenController" ng-show="Rover.isLocal == true">
             <a href="#/movements"><span>movement screen</span></a>
 			<ul style="display: block;">
                 <li ng-repeat="movement_page in data.movement_pages">
@@ -82,6 +82,6 @@
                     </a>
 				</li>
             </ul>
-        </li> -->
+        </li>
     </ul>
 </div>
