--- a/angular-app/styles/main.scss
+++ b/angular-app/styles/main.scss
@@ -680,20 +680,20 @@ $text-colors:(
 
 .movement-left-column {
 	width: 200px;
-	height: 480px;
+	height: 408px;
 	background-color:#f5f6f8;
 	float:left;
 	position:relative;
 }
 
-.movement-left-column.test-page>div {
+.movement-left-column.test-page > div {
 	height:56px;
 	display:flex;
 	justify-content:center;
 	align-items: center;
 }
 
-.movement-left-column.non-test-pages>div.row {
+.movement-left-column.non-test-pages > div.row {
 
 	height:56px;
 	line-height:56px;
@@ -707,7 +707,8 @@ $text-colors:(
 	line-height: 36px;
 	margin:0;
 }
-.movement-left-column>div:hover {
+
+.movement-left-column > div:hover {
 	background-color: white;
 }
 
@@ -1314,30 +1315,20 @@ ul.team{
 	border-color: #91decb;
 }
 
-
-
-
-
-
-
-.breadcrumb-movement-sm {
-	height: 40px;
-
-}
-
-.breadcrumb-movement-sm>li {
+.breadcrumb-movement-sm > li {
 	list-style: none;
 	background-color: #E9D4C3;
 	float: left;
 	margin-right: 10px;
 	height: 30px;
 	width: 85px;
+    text-transform: uppercase;
 	-ms-transform: skewX(-26deg);
 	-webkit-transform: skewX(-26deg);
 	transform: skewX(-26deg);
 }
 
-.breadcrumb-movement-sm>li>a {
+.breadcrumb-movement-sm > li > a {
 	display:block;
 	-ms-transform: skewX(26deg);
 	-webkit-transform: skewX(26deg);
