--- a/public/views/fms/demo/partials/analysis-transverse.html
+++ b/public/views/fms/demo/partials/analysis-transverse.html
@@ -4,7 +4,7 @@
 </div>
 
 <div class="panel-body">
-    <video class="demo-test" style="width: 100%;">
+    <video class="demo-analysis" style="width: 100%;">
         <source ng-src="{{'../../../../demo/aslr/left/transverse.webm'}}" type="video/webm"/>
         <source src="{{'../../../../demo/aslr/left/transverse.mp4'}}" type="video/mp4"/>
         Sorry, your browser doesn't support HTML5 video.
