--- a/public/views/fms/live/partials/test-menu.html
+++ b/public/views/fms/live/partials/test-menu.html
@@ -1,12 +1,18 @@
 
-<div class="movement-left-column test-page">
-    <div ng-click="startTest()" ng-class="{'active': fms.current.isTestLive === true}">
+<div
+    ng-hide="run.getStatus() == 'saved' || run.getStatus() == 'pain'"
+    class="movement-left-column test-page">
+
+    <div ng-click="run.start()" ng-show="isTestLive == false">
         Start
     </div>
-    <div ng-click="endTest()" ng-class="{'active': fms.current.isTestLive === false}">
+    <div ng-click="run.end()" ng-show="isTestLive == true">
         Stop
     </div>
-    <div style="color:#f48b4a;" ng-click="IndicateTestPain()">
+    <div ng-click="run.pain()" ng-show="isTestLive == true" style="color:#f48b4a;">
         Pain
+    </div>
+    <div ng-click="run.fault()" ng-show="isTestLive == true" style="color:#f48b4a;">
+        Fault
     </div>
 </div>
